--- a/estilo/style.css
+++ b/estilo/style.css
@@ -60,7 +60,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 30px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.575);
 }
 
@@ -149,14 +149,14 @@ main img.pequena {
 }
 
 div.video {
-    position: relative;
     background-color: var(--cor5);
     margin: 0px -20px 30px -20px;
     padding: 20px;
-    padding-bottom: 56,26%;
+    padding-bottom: 59%;
+    position: relative;
 }
 
-div.video > frame {
+div.video > iframe {
     position: absolute;
     top: 5%;
     left: 5%;
